// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker > Should disabled work 1`] = `
<div>
  <div
    class="ant-color-picker-trigger css-var-root ant-color-picker-css-var ant-color-picker-trigger-disabled"
  >
    <div
      class="ant-color-picker-clear"
    />
  </div>
</div>
`;

exports[`ColorPicker > Should panelRender with components work 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="ant-color-picker-trigger css-var-root ant-color-picker-css-var ant-popover-open ant-color-picker-trigger-active"
  >
    <div
      class="ant-color-picker-clear"
    />
  </div>
</div>
`;

exports[`ColorPicker > Should panelRender work 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="ant-color-picker-trigger css-var-root ant-color-picker-css-var ant-popover-open ant-color-picker-trigger-active"
  >
    <div
      class="ant-color-picker-clear"
    />
  </div>
</div>
`;

exports[`ColorPicker > Should render trigger work 1`] = `
<div>
  <div
    class="trigger"
  />
</div>
`;

exports[`ColorPicker > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-color-picker-trigger css-var-root ant-color-picker-css-var ant-color-picker-rtl"
>
  <div
    class="ant-color-picker-clear"
  />
</div>
`;
